fix: Fix deployment path and navbar component rendering
- Update deploy.sh to upload files to /var/www/html/browser/ instead of /var/www/html/
- Fix navbar component to always render with default user data
- Add error handling to prevent component from failing to render
- Add console logs for debugging navbar component
- Fix file permissions and nginx configuration
- Ensure site is accessible with HTTP 200 OK response